# backend/src/routes/user.route.ts
@@ -1,0 +1,9 @@
+import express from "express";
+import { getInfor } from "../controllers/user.controller";
+import { AuthMiddleware } from "../middlewares/auth.middleware";
+
+const router = express.Router();
+
+router.get("/", AuthMiddleware.verifyToken, getInfor);
+
+export default router;
